# Machine-Learning-Projects

./: .gitignore  .uv.lock.icloud  README.md  pyproject.toml  pyproject.toml.save
Customer Churn Intelligence Platform/: db_form.txt  layout.txt  structure.txt
Customer Churn Intelligence Platform/backend/: helpers.py  main.py  schema.py
Customer Churn Intelligence Platform/config/: settings.py
Customer Churn Intelligence Platform/data/processed/: training_features.parquet
Customer Churn Intelligence Platform/database/: connection.py  insert_data.py  operations.py  schemas.py
Customer Churn Intelligence Platform/frontend/: app.py  config.py
Customer Churn Intelligence Platform/frontend/components/: html_components.py
Customer Churn Intelligence Platform/frontend/pages/: account_advisor.py  bulk_risk_view.py  knowledge_base.py  platform_health.py
Customer Churn Intelligence Platform/frontend/styles/: style.css
Customer Churn Intelligence Platform/frontend/utils/: api_client.py  formatters.py  style_loader.py
Customer Churn Intelligence Platform/models/: test_results.json
Customer Churn Intelligence Platform/models/evaluation/: random_forest_metrics.json
Customer Churn Intelligence Platform/scripts/: create_data.py  rag_db.py  test_features.py  train_data.py
Customer Churn Intelligence Platform/src/ai_advisor/: advisor.py  context_builder.py
Customer Churn Intelligence Platform/src/features/: feature_eng.py  training_data.py
Customer Churn Intelligence Platform/src/models/: classifier.py  evaluate.py  train_churn_model.py
Customer Churn Intelligence Platform/src/utils/: file_readers.py
House Price Prediction (API + DB)/: main.py
House Price Prediction (API + DB)/data/: ingest_kaggle.py
House Price Prediction (API + DB)/src/: eda.py
House Price Prediction (API + DB)/src/database/: connection.py
House Price Prediction (API + DB)/src/encoders/: city_mapping.json  state_mapping.json  status_mapping.json
House Price Prediction (API + DB)/src/features/: engineer.py
House Price Prediction (API + DB)/src/models/: model_train.py  predict.py
Job Market Skill Analyzer/: main.py  pyproject.toml  structure.txt
Job Market Skill Analyzer/config/: settings.py
Job Market Skill Analyzer/database/:  Initial.py  alembic.ini  models.py  session.py  test_db.py
News Scrapper/: phases.txt  requirements.txt  structure.txt
News Scrapper/config/: settings.py  sources.yaml
News Scrapper/database/: connection.py  insert_db.py  insert_from_kaggle.py  models.py  operations.py
News Scrapper/scripts/: build_vectorizer.py  evaluate_model.py  run_preprocessing.py  test_tfidf.py  train_model.py
News Scrapper/src/features/: tfidf_vectorizer.py
X (Twitter) Sentiment Analysis/config/: settings.py
X (Twitter) Sentiment Analysis/database/: .txt  connect.py  insert_into_db.py
X (Twitter) Sentiment Analysis/models/: training_metadata.json
X (Twitter) Sentiment Analysis/scripts/: insert_processed_text.py  train_model.py
X (Twitter) Sentiment Analysis/utils/: text_util.py
rag-kb/: structure.txt
rag-kb/src/: ingest.py  loader.py  prompts.py  qa.py
(+31 files in other folders)
