[project]
name = "machine-learning-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.17.2",
    "apscheduler>=3.11.2",
    "beautifulsoup4>=4.14.3",
    "faiss-cpu==1.7.4",
    "fastapi>=0.128.0",
    "kagglehub>=0.3.13",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.2",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
    "tiktoken>=0.12.0",
    "trafilatura>=2.0.0",
    "uvicorn>=0.40.0",
    "chromadb>=0.4.2",
    "transformers>=4.33.1",
    "sentence-transformers>=2.2.2",
    "langchain-huggingface>=1.2.0",
    "numpy>=2.2.0",
    "faker>=40.1.2",
    "xgboost>=3.2.0",
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
